<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivityPerfilCliente">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:paddingTop="20dp"
                android:paddingRight="20dp">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:text="@string/mi_perfil"
                    android:textColor="@color/purple_500"
                    android:textSize="34sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txtInputUsuario"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/Nombre"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/nombre"
                            android:singleLine="true"
                            android:textColor="@android:color/black"
                            android:textColorHint="@android:color/black"
                            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txtInputEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/Email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/email"
                            android:singleLine="true"
                            android:textColor="@android:color/black"
                            android:textColorHint="@android:color/black"
                            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <Button
                        android:id="@+id/btnGuardar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="10dp"
                        android:paddingRight="20dp"
                        android:text="@string/guardar"
                        android:textAllCaps="false"
                        android:textColor="@color/design_default_color_background"
                        android:textSize="18sp" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</FrameLayout>